Fix list-item alignment and spacings

--- a/packages/react/src/components/fileInput/FileInput.module.scss
+++ b/packages/react/src/components/fileInput/FileInput.module.scss
@@ -67,8 +67,7 @@ $componentMaxWidth: 500px;
   border-bottom: 2px dotted var(--color-coat-of-arms);
   box-sizing: border-box;
   display: flex;
-  padding: var(--spacing-s);
-  padding-right: var(--spacing-2-xs);
+  padding: var(--spacing-s) var(--spacing-2-xs);
   max-width: 100%;
   width: $componentMaxWidth;
 
@@ -83,7 +82,7 @@ $componentMaxWidth: 500px;
   flex: 1;
   flex-wrap: nowrap;
   font-size: var(--fontsize-body-s);
-  margin: 0 var(--spacing-xs);
+  margin: 2px var(--spacing-xs) 0;
 }
 
 .fileListItemName {
@@ -92,15 +91,13 @@ $componentMaxWidth: 500px;
 }
 
 .fileListItemSize {
-  flex: 1;
-  margin-left: var(--spacing-s);
-  min-width: 6ch;
+  margin-left:var(--spacing-2-xs);
   text-align: right;
   white-space: nowrap;
 }
 
 .fileListItemButton {
-  --file-list-item-button-y-offset: calc(-1 * var(--spacing-2-xs) - 1px);
+  --file-list-item-button-y-offset: calc(-1 * var(--spacing-2-xs) - 2px);
   display: flex;
   margin: var(--file-list-item-button-y-offset) auto var(--file-list-item-button-y-offset) 0;
 }
